--- a/src/app/carnet/formulaire-constantes/formulaire-constantes.component.html
+++ b/src/app/carnet/formulaire-constantes/formulaire-constantes.component.html
@@ -1,6 +1,9 @@
+<ScrollView>
 <StackLayout class="form">
     <TextField class="formSanteCss" hint="Groupe Sanguin" [(ngModel)]="carnetServ.dossierSante.groupe" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
     <TextField class="formSanteCss" hint="Taille (en cm)" [(ngModel)]="carnetServ.dossierSante.taille" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
     <TextField class="formSanteCss" hint="Poids (en kg)" [(ngModel)]="carnetServ.dossierSante.poids" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
-    <Button [nsRouterLink]="['/']" text="VALIDER" class="valider_carnet" backgroundColor="green"; color="white"></Button> 
+    <Label text="&#xf138;" class="nt-icon fas" horizontalAlignment="center" paddingTop="20%" color="#000000"></Label>
+    <!-- <Button [nsRouterLink]="['/']" text="VALIDER" class="valider_carnet" backgroundColor="green"; color="white"></Button>  -->
 </StackLayout>
+</ScrollView>
