--- a/src/app/carnet/formulaire-dossier-medical/formulaire-dossier-medical.component.html
+++ b/src/app/carnet/formulaire-dossier-medical/formulaire-dossier-medical.component.html
@@ -1,7 +1,10 @@
+<ScrollView>
 <StackLayout class="form">
     <TextField class="formSanteCss" hint="Donneur d'organe (OUI/NON)" [(ngModel)]="carnetServ.dossierSante.donneur" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
     <TextField class="formSanteCss" hint="Allergie(s)" [(ngModel)]="carnetServ.dossierSante.allergie" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
     <TextField class="formSanteCss" hint="Pathologie(s)" [(ngModel)]="carnetServ.dossierSante.pathologie" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
     <TextField class="formSanteCss" hint="Traitement(s)" [(ngModel)]="carnetServ.dossierSante.traitement" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
-    <Button [nsRouterLink]="['/']" text="VALIDER" class="valider_carnet" backgroundColor="green"; color="white"></Button> 
+    <Label text="&#xf138;" class="nt-icon fas" horizontalAlignment="center" paddingTop="20%" color="#000000"></Label>
+    <!-- <Button [nsRouterLink]="['/']" text="VALIDER" class="valider_carnet" backgroundColor="green"; color="white"></Button>  -->
 </StackLayout>
+</ScrollView>
