--- a/src/app/informations/informations/informations.component.html
+++ b/src/app/informations/informations/informations.component.html
@@ -31,6 +31,10 @@
                 <Label text="REMONTEES"></Label>
                 <!-- <Label text="" class="nt-icon fas"></Label> -->
             </TabStripItem>
+            <TabStripItem>
+                <Label text="PLAN"></Label>
+                <!-- <Label text="" class="nt-icon fas"></Label> -->
+            </TabStripItem>
         </TabStrip>
         <TabContentItem>
             <GridLayout>
@@ -50,6 +54,11 @@
         <TabContentItem>
             <GridLayout>
                 <ns-remontees></ns-remontees>
+            </GridLayout>
+        </TabContentItem>
+        <TabContentItem>
+            <GridLayout>
+                <ns-plan></ns-plan>
             </GridLayout>
         </TabContentItem>
     <!-- </BottomNavigation> -->
