--- a/src/app/sos/etat/etat.component.html
+++ b/src/app/sos/etat/etat.component.html
@@ -77,5 +77,23 @@
         </FlexboxLayout>
     </GridLayout>
     
-</ScrollView> -->
+</ScrollView>-->
+
+
+<!-- 
+
+Test d'ajout de video à l'appli !!!
+
+
+<StackLayout>
+    <VideoPlayer : Video id="nativeVideoPlayer" controls="true" autoplay="true" height="300" src="~/app/videos/Skiers- 13450.mp4"></VideoPlayer>
+    <VideoPlayer : Video id="nativeVideoPlayer" controls="true" autoplay="true" height="300" src="~/videos/Skiers- 13450.mp4"></VideoPlayer>
+	<Button class="btn btn-primary" text="Play" (tap)="play()"></Button>
+	<Button class="btn btn-primary" text="Pause" (tap)="pause()"></Button>
+	<Button class="btn btn-primary" text="Go To 30 seconds" (tap)="seekToTime()"></Button>
+</StackLayout> -->
+
+
+
+
 
