--- a/src/app/utilisateur/cguappli/cguappli.component.html
+++ b/src/app/utilisateur/cguappli/cguappli.component.html
@@ -10,9 +10,25 @@
         <Button [nsRouterLink]="['/utilisateur/connexion']" text="JE REFUSE" backgroundColor="#0DF24D" color="white" fontSize="20rem" class="soumission" marginTop="66%" marginBottom="10%"></Button> -->
     </GridLayout> 
 </ScrollView> 
-    <GridLayout rows="*" columns="*,*" id="basDePage">
+    <!-- <GridLayout rows="*" columns="*,*" id="basDePage">
         <Label [nsRouterLink]="['/utilisateur/choixstation']" col="0" row="0" text="&#xf13a;" class="nt-icon fas"></Label>
         <Label [nsRouterLink]="['/utilisateur/connexion']" col="1" row="0" text="&#xf057;" class="nt-icon fas"></Label>
+    </GridLayout> -->
+
+    <GridLayout verticalAlignment="bottom">
+        <GridLayout columns="*, *" height="70"  backgroundColor="#FFFF00">
+            <GridLayout  col="0" #tabHighlight>
+            </GridLayout>
+            <GridLayout col="0" backgroundColor="#000000">
+                <Label [nsRouterLink]="['/utilisateur/choixstation']" col="0" row="0" text="&#xf13a;" class="nt-icon fas" verticalAlignment="center" horizontalAlignment="center"></Label>
+                <!-- <Image #image1 src="~/app/images/infos.png" height="60" width="60"></Image> -->
+            </GridLayout>
+            <GridLayout col="1" backgroundColor="#000000">
+                <Label [nsRouterLink]="['/utilisateur/connexion']" col="1" row="0" text="&#xf057;" class="nt-icon fas" verticalAlignment="center" horizontalAlignment="center"></Label>
+                <!-- <Image #image2 src="~/app/images/locaDanger.png" height="60" width="60"></Image> -->
+            </GridLayout>
+            
+        </GridLayout>
     </GridLayout>
 
 
