--- a/src/app/utilisateur/connexion/connexion.component.html
+++ b/src/app/utilisateur/connexion/connexion.component.html
@@ -1,9 +1,11 @@
+<ScrollView>
 <StackLayout class="form">
-  <StackLayout class="input-field">
-      <Label text="CONNEXION" class="motDePasse"></Label>   
-  <TextField class="formSanteCss" hint="Entrez votre mot de passe" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
-  <Button [nsRouterLink]="['/utilisateur/choixstation']" text="ME CONNECTER" width="90%" height="9%" backgroundColor="black"; color="yellow"></Button> 
+      <Label text="CONNEXION" class="motDePasse"></Label>  
+      <image row="0" src="~/app/images/Logo Skiview.png" width="40%" height="20%"></image> 
+  <TextField class="formSanteCss" hint="Entrez votre mot de passe" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
+  <Button [nsRouterLink]="['/utilisateur/choixstation']" text="ME CONNECTER" width="90%" height="50rem" backgroundColor="black"; color="yellow"></Button> 
 </StackLayout>
+</ScrollView>
 
 
 
