--- a/src/app/utilisateur/creationcompte/creationcompte.component.html
+++ b/src/app/utilisateur/creationcompte/creationcompte.component.html
@@ -1,10 +1,14 @@
+<!-- <ScrollView> -->
 
 <StackLayout class="ecran">
-<GridLayout class="page__content">
+<GridLayout class="page__content" backgroundColor="#FFFFFF">
 
     <!-- <GridLayout rows="350">
         <image row="0" src="~/images/thumbnail.png"></image>
     </GridLayout> -->
+    <GridLayout rows="170">
+        <image row="0" src="~/app/images/Logo Skiview.png" width="100%" height="100%"></image>
+    </GridLayout>
     <GridLayout rows="350">
         <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
     </GridLayout>
@@ -18,6 +22,8 @@
     </GridLayout>
 </GridLayout>
 </StackLayout>
+
+<!-- </ScrollView> -->
 <!-- <StackLayout class="hr" height="71%"></StackLayout> -->
 <!-- <StackLayout>
     <BottomNavigation>
