--- a/src/app/utilisateur/gestion-compte/gestion-compte.component.html
+++ b/src/app/utilisateur/gestion-compte/gestion-compte.component.html
@@ -1,3 +1,19 @@
+<ActionBar>
+    <!-- 
+    Use the NavigationButton as a side-drawer button in Android
+    because ActionItems are shown on the right side of the ActionBar
+    -->
+    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
+    <!-- 
+    Use the ActionItem for IOS with position set to left. Using the
+    NavigationButton as a side-drawer button in iOS is not possible,
+    because its function is to always navigate back in the application.
+    -->
+    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" ios.position="left">
+    </ActionItem>
+    <Label class="pageLabel" text="GESTION DU COMPTE"></Label>
+</ActionBar>
+<ScrollView>
 <StackLayout>
 <!-- <GridLayout rows="50, 100" class="photo_profil">
     <Label row="0" text="PHOTO" class="photo_profil"></Label>
@@ -24,17 +40,30 @@
     <ContentView row="1" width="45%" backgroundColor="#C4C4C4" class="photo_danger"></ContentView>
 </FlexboxLayout>  -->
 
-<GridLayout rows="250" (tap)="takePicture()">
+
+<!-- <GridLayout rows="250" (tap)="onTakePictureTap()">
     <Label row="0" width="160vw" backgroundColor="#C4C4C4" class="photo_danger" marginTop="30vh"></Label>
-    <Label text="&#xf030;" id="cameraProfil2" class="nt-icon fas"></Label>
-</GridLayout>
+    <Label text="&#xf030;" id="cameraProfil2" class="nt-icon fas" verticalAlignment="center"></Label>
+</GridLayout> -->
+
+
 <!-- <FlexboxLayout flexDirection="column" justifyContent="center">
     <Label text="&#xf030;" class="nt-icon fas" id="cameraProfil"></Label>
     <Label text="PRENDRE UNE PHOTO" id="cameraProfil2"></Label>
 </FlexboxLayout>  -->
 
+<GridLayout rows="80, 250">
+	<StackLayout orientation="horizontal" row="0" padding="10">
+		<Label row="0" text="saveToGallery"></Label>
+		<Switch row="0" [(ngModel)]="saveToGallery"></Switch>
+    </StackLayout>
+    <!-- <Button text="Take Picture" (tap)="onTakePictureTap($event)" row="2" padding="10"></Button> -->
+	<Image row="1" [src]="cameraImage" stretch="fill" margin="200" width="200rem" height="300rem" backgroundColor="#C4C4C4"></Image>
+	
+</GridLayout>
+
 <GridLayout rows="80">
-    <Button row="0" text="CHANGER LA PHOTO DE PROFIL" class="btn btn-warning" tap="onAddImageTap()"></Button> 
+    <Button row="0" text="CHANGER LA PHOTO DE PROFIL" (tap)="onTakePictureTap($event)" class="btn btn-warning" tap="onAddImageTap()"></Button> 
 </GridLayout>
 <GridLayout rows="80">
     <Button row="0" text="GESTION MOT DE PASSE" [nsRouterLink]="['/utilisateur/gestionmdp']" pageTransition="flip" class="btn btn-warning"></Button> 
@@ -42,6 +71,7 @@
 <GridLayout rows="80">
     <Button row="0" text="GESTION E-MAIL" [nsRouterLink]="['/utilisateur/gestionmail']" pageTransition="flip" class="btn btn-warning"></Button> 
 </GridLayout>
+
 <!-- <BottomNavigation>
     <TabStrip>
         <TabStripItem>
@@ -61,3 +91,6 @@
     <Label [nsRouterLink]="['/sos']" col="2" row="0" text="&#xf479;" class="nt-icon fas" id="basDePage"></Label>
 </GridLayout> -->
 </StackLayout>
+</ScrollView>
+
+
