--- a/src/app/danger/accueil-danger/accueil-danger.component.html
+++ b/src/app/danger/accueil-danger/accueil-danger.component.html
@@ -4,6 +4,7 @@
     because ActionItems are shown on the right side of the ActionBar
     -->
     <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
+    <!-- <NavigationButton ios:visibility="collapsed" icon="res://bell" (tap)="onDrawerButtonTap()" textAlign="right"></NavigationButton> -->
     <!-- 
     Use the ActionItem for IOS with position set to left. Using the
     NavigationButton as a side-drawer button in iOS is not possible,
