--- a/src/app/danger/fiche-signalement/fiche-signalement.component.html
+++ b/src/app/danger/fiche-signalement/fiche-signalement.component.html
@@ -33,6 +33,20 @@
         </TabStrip>
     </BottomNavigation>
 </StackLayout> -->
-<GridLayout rows="*" columns="*">
+
+
+<!-- <GridLayout rows="*" columns="*">
     <Label [nsRouterLink]="['/utilisateur/station']" col="0" row="0" text="&#xf015;" class="nt-icon fas" id="basDePage"></Label>
+</GridLayout> -->
+
+
+<GridLayout verticalAlignment="bottom">
+    <GridLayout columns="*" height="70"  backgroundColor="#FFFF00">
+        <GridLayout  col="0" #tabHighlight>
+        </GridLayout>
+        <GridLayout col="0" backgroundColor="#000000">
+            <Label [nsRouterLink]="['/utilisateur/choixstation']" col="0" row="0" text="&#xf015;" class="nt-icon fas"  textAlign="center" verticalAlignment="center" horizontalAlignment="center"></Label>
+            <!-- <Image #image1 src="~/app/images/infos.png" height="60" width="60"></Image> -->
+        </GridLayout>   
+    </GridLayout>
 </GridLayout>
