--- a/src/app/utilisateur/choixstation/choixstation.component.html
+++ b/src/app/utilisateur/choixstation/choixstation.component.html
@@ -21,7 +21,9 @@
             <image row="0" src="~/app/images/Logo Skiview.png" width="40%" height="20%"></image>
         </GridLayout>
         <GridLayout rows="350">
+        <!-- <GridLayout rows="*" verticalAlignment="bottom"> -->
             <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
+            <!-- <image row="0" src="~/app/images/silhouetteMontagne3.png"></image> -->
         </GridLayout>
         <!-- <GridLayout rows="800">
             <ContentView row="0" id="cache_noir" width="100%" height="65%" backgroundColor="#000000"></ContentView> -->
