--- a/src/app/utilisateur/inscription/inscription.component.html
+++ b/src/app/utilisateur/inscription/inscription.component.html
@@ -1,30 +1,69 @@
+<!-- <FlexboxLayout class="page">
+  <StackLayout class="form">
+      <Image class="logo" src="~/images/logo.png"></Image>
+      <Label class="header" text="APP NAME"></Label>
+
+      <PreviousNextView>
+          <GridLayout rows="auto, auto, auto">
+              <StackLayout row="0" class="input-field">
+                  <TextField class="input" hint="Email" [isEnabled]="!processing"
+                      keyboardType="email" autocorrect="false"
+                      autocapitalizationType="none" [(ngModel)]="user.email"
+                      returnKeyType="next" (returnPress)="focusPassword()"></TextField>
+                  <StackLayout class="hr-light"></StackLayout>
+              </StackLayout>
+
+              <StackLayout row="1" class="input-field">
+                  <TextField #password class="input" [isEnabled]="!processing"
+                      hint="Password" secure="true" [(ngModel)]="user.password"
+                      [returnKeyType]="isLoggingIn ? 'done' : 'next'"
+                      (returnPress)="focusConfirmPassword()"></TextField>
+                  <StackLayout class="hr-light"></StackLayout>
+              </StackLayout>
+
+              <StackLayout row="2" *ngIf="!isLoggingIn" class="input-field">
+                  <TextField #confirmPassword class="input" [isEnabled]="!processing"
+                      hint="Confirm password" secure="true" [(ngModel)]="user.confirmPassword"
+                      returnKeyType="done"></TextField>
+                  <StackLayout class="hr-light"></StackLayout>
+              </StackLayout>
+
+              <ActivityIndicator rowSpan="3" [busy]="processing"></ActivityIndicator>
+          </GridLayout>
+      </PreviousNextView>
+
+      <Button [text]="isLoggingIn ? 'Log In' : 'Sign Up'" [isEnabled]="!processing"
+          (tap)="submit()" class="btn btn-primary m-t-20"></Button>
+      <Label *ngIf="isLoggingIn" text="Forgot your password?" class="login-label"
+          (tap)="forgotPassword()"></Label>
+  </StackLayout>
+
+  <Label class="login-label sign-up-label" (tap)="toggleForm()">
+      <FormattedString>
+          <Span [text]="isLoggingIn ? 'Don’t have an account? ' : 'Back to Login'"></Span>
+          <Span [text]="isLoggingIn ? 'Sign up' : ''" class="bold"></Span>
+      </FormattedString>
+  </Label>
+</FlexboxLayout> -->
+
+
+
+<ScrollView>
 <StackLayout class="form">
-  <StackLayout class="input-field">
-      <Label text="INSCRIPTION" class="motDePasse"></Label>   
-  <TextField class="formSanteCss" hint="Entrez votre E-mail" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
-  <TextField class="formSanteCss" hint="Entrez votre mot de passe" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
-  <TextField class="formSanteCss" hint="Entrez votre N° de téléphone" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
-  <Button [nsRouterLink]="['/utilisateur/cguappli']" text="M'INSCRIRE" width="90%" height="9%" backgroundColor="black"; color="yellow"></Button> 
+  <Label text="INSCRIPTION" class="motDePasse"></Label>  
+  <image row="0" src="~/app/images/Logo Skiview.png" width="40%" height="20%"></image>
+  <TextField hint="Entrez votre E-mail" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
+  <TextField hint="Entrez votre mot de passe" color="black" background="lightgrey" width="90%" height="50rem" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField>
+  <!-- <TextField class="formSanteCss" hint="Entrez votre N° de téléphone" color="black" background="lightgrey" width="90%" height="9%" borderRadius="10%" paddingLeft="8%" fontSize="20rem"></TextField> -->
+  <Button [nsRouterLink]="['/utilisateur/cguappli']" text="M'INSCRIRE" width="90%" height="50rem" backgroundColor="black"; color="yellow"></Button> 
 </StackLayout>
+</ScrollView>
 
 
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+ 
 
 <!-- <GridLayout class="pagecontent"rows="50" columns='*'>
 
