--- a/src/app/utilisateur/station/station.component.html
+++ b/src/app/utilisateur/station/station.component.html
@@ -1,8 +1,23 @@
+<ActionBar>
+    <!-- 
+    Use the NavigationButton as a side-drawer button in Android
+    because ActionItems are shown on the right side of the ActionBar
+    -->
+    <NavigationButton ios:visibility="collapsed" icon="res://menu" (tap)="onDrawerButtonTap()"></NavigationButton>
+    <!-- 
+    Use the ActionItem for IOS with position set to left. Using the
+    NavigationButton as a side-drawer button in iOS is not possible,
+    because its function is to always navigate back in the application.
+    -->
+    <ActionItem icon="res://menu" android:visibility="collapsed" (tap)="onDrawerButtonTap()" ios.position="left">
+    </ActionItem>
+    <Label class="pageLabel" text="ACCUEIL"></Label>
+</ActionBar>
 <StackLayout>
     <GridLayout class="page__content">
 
         <GridLayout rows="120">
-            <image row="0" src="~/app/images/Logo Skiview.png" width="40%" height="20%"></image>
+            <image row="0" src="~/app/images/Logo Skiview.png" width="140rem" height="100rem"></image>
         </GridLayout>
         <GridLayout rows="350">
             <image row="0" src="https://pngimage.net/wp-content/uploads/2018/06/mountain-silhouette-png-3.png"></image>
@@ -13,9 +28,10 @@
             <!-- <Label row="2" class="entete2" text="Bienvenue à"></Label> -->
         </GridLayout>
         <GridLayout>
-            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="60%" height="60%" class="logo_station"></image>
+            <image src="https://www.flocon-vert.org/wp-content/uploads/2017/09/Capture-d%E2%80%99%C3%A9cran-2017-09-27-%C3%A0-10.00.41-291x300.png" width="200rem" height="200rem" class="logo_station"></image>
         </GridLayout>
-    
+    </GridLayout>
+</StackLayout>   
 
 <!-- <StackLayout>
     <BottomNavigation>
@@ -33,11 +49,35 @@
         </TabStrip>
     </BottomNavigation>
 </StackLayout> -->
-<StackLayout class="hr" marginTop="81%"></StackLayout>
+
+
+<!-- <StackLayout class="hr" marginTop="81%"></StackLayout>
 <GridLayout rows="*" columns="*,*,*">
     <Label [nsRouterLink]="['/informations']" col="0" row="0" text="&#xf05a;" class="nt-icon fas" id="basDePage"></Label>
     <Label [nsRouterLink]="['/danger']" col="1" row="0" text="&#xf071;" class="nt-icon fas" id="basDePage"></Label>
     <Label [nsRouterLink]="['/sos']" col="2" row="0" text="&#xf479;" class="nt-icon fas" id="basDePage"></Label>
 </GridLayout>
 </GridLayout>
-</StackLayout>
+</StackLayout> -->
+
+
+
+
+<GridLayout verticalAlignment="bottom">
+    <GridLayout columns="*, *, *" height="70"  backgroundColor="#FFFF00">
+        <GridLayout  col="0" #tabHighlight>
+        </GridLayout>
+        <GridLayout col="0" backgroundColor="#000000">
+            <Image #image1 src="~/app/images/infos.png" [nsRouterLink]="['/informations']" height="60"
+                width="60"></Image>
+        </GridLayout>
+        <GridLayout col="1" backgroundColor="#000000">
+            <Image #image2 src="~/app/images/locaDanger.png" [nsRouterLink]="['/danger']" height="60"
+                width="60"></Image>
+        </GridLayout>
+        <GridLayout col="2" backgroundColor="#000000">
+            <Image #image3 src="~/app/images/locaSecours.png" [nsRouterLink]="['/sos']" height="60"
+                width="60"></Image>
+        </GridLayout>
+    </GridLayout>
+</GridLayout>
